# litebin

./: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: main.rs  paste_id.rs  tests.rs
src/tests/: mod.rs
upload/: iaFMlhc6
