[package]
name = "litebin"
description = " Tiny pastebin written in Rust"
rust-version = "1.62.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aurora-dot/litebin"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket-basicauth = "2"
rand = "0.8"
dict = "0.1.5"

