[package]
name = "litebin"
description = " Tiny pastebin written in Rust"
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aurora-dot/litebin"
readme = "README.md"
version = "0.1.2"
edition = "2021"
exclude = ["dockerfile", ".dockerignore"]

[dependencies]
rocket = "0.5.0-rc.2"
rocket-basicauth = "2"
rand = "0.8"
infer = "0.8.0"
tokio = "1.6.1"

[dev-dependencies]
base64 = "0.13.0"
